--- a/css/storefront/cart.css
+++ b/css/storefront/cart.css
@@ -303,7 +303,13 @@ div.goback > i {
     }
 
     input[type="number"] {
-        margin-top: 15px;
+        margin-top: 11px;
+    }
+
+    .btn-update {
+        background-color: transparent;
+        border: none;
+        margin-left: 294%;
     }
 
     .item-title{
@@ -393,3 +399,35 @@ div.goback > i {
         text-align: center;
         }
     }
+
+
+/* Media Queries for Ipad size */
+@media all and (min-width:700px) and (max-width: 1023px){  
+    h1.shoppingbag {
+        font-size: 0.8em;
+    }
+
+    h1:before, h1:after {
+        width: 35%;
+        margin-right: 1em;
+    }
+
+    form {
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .cart-content {
+        margin-bottom: 2%;
+    }
+
+    .goback2 {
+        width: 90%;
+    }
+
+    .aside {
+        width: 50%;
+        height: 83px;
+        margin-left: 5%;
+    }
+}
